@@ -31,6 +31,31 @@ sub main {
     exit 0;
 }
 
+{
+    # If you run chmod 0644 on a file and read the permissions back with
+    # stat what you get back depends on your OS. On Unix you get 0644 back
+    # but on Windows you will get something else back. This function creates
+    # a hash that maps "permission we set with chmod" to "permission we read
+    # back with stat",
+    my %p;
+
+    sub _p {
+        my ($value) = @_;
+
+        return $p{$value} if exists $p{$value};
+
+        my $tmp_dir = path( tempdir() );
+        my $file    = $tmp_dir->child('file.txt');
+        $file->spew("hello world\n");
+
+        chmod $value, $file;
+        my $perm = ( stat $file )[2] & 07777;
+
+        note( sprintf q{On this system, 'chmod 0%o' results in 0%o}, $value, $perm );
+        return $p{$value} = $perm;
+    }
+}
+
 sub _configure_root {
     my ($root_dir) = @_;
 
@@ -65,10 +90,10 @@ sub _configure_root {
     $git->add( $files[-1] );
     chmod 0644, $files[-1];
 
-    is( ( stat $files[0] )[2] & 07777, 0755, sprintf q{File '%s' created correctly}, $files[0]->relative($root_dir) );
-    is( ( stat $files[1] )[2] & 07777, 0600, sprintf q{File '%s' created correctly}, $files[1]->relative($root_dir) );
-    is( ( stat $files[2] )[2] & 07777, 0,    sprintf q{File '%s' created correctly}, $files[2]->relative($root_dir) );
-    is( ( stat $files[3] )[2] & 07777, 0644, sprintf q{File '%s' created correctly}, $files[3]->relative($root_dir) );
+    is( ( stat $files[0] )[2] & 07777, _p(0755), sprintf q{File '%s' created correctly}, $files[0]->relative($root_dir) );
+    is( ( stat $files[1] )[2] & 07777, _p(0600), sprintf q{File '%s' created correctly}, $files[1]->relative($root_dir) );
+    is( ( stat $files[2] )[2] & 07777, _p(0),    sprintf q{File '%s' created correctly}, $files[2]->relative($root_dir) );
+    is( ( stat $files[3] )[2] & 07777, _p(0644), sprintf q{File '%s' created correctly}, $files[3]->relative($root_dir) );
 
     return @files;
 }
@@ -100,10 +125,10 @@ sub _test_with_defaults {
 
     is( exception { $tzil->build; }, undef, 'Built dist successfully' );
 
-    is( ( stat $files[0] )[2] & 07777, 0644, sprintf q{File '%s' adjusted correctly}, $files[0]->relative($root_dir) );
-    is( ( stat $files[1] )[2] & 07777, 0644, sprintf q{File '%s' adjusted correctly}, $files[1]->relative($root_dir) );
-    is( ( stat $files[2] )[2] & 07777, 0644, sprintf q{File '%s' adjusted correctly}, $files[2]->relative($root_dir) );
-    is( ( stat $files[3] )[2] & 07777, 0644, sprintf q{File '%s' adjusted correctly}, $files[3]->relative($root_dir) );
+    is( ( stat $files[0] )[2] & 07777, _p(0644), sprintf q{File '%s' adjusted correctly}, $files[0]->relative($root_dir) );
+    is( ( stat $files[1] )[2] & 07777, _p(0644), sprintf q{File '%s' adjusted correctly}, $files[1]->relative($root_dir) );
+    is( ( stat $files[2] )[2] & 07777, _p(0644), sprintf q{File '%s' adjusted correctly}, $files[2]->relative($root_dir) );
+    is( ( stat $files[3] )[2] & 07777, _p(0644), sprintf q{File '%s' adjusted correctly}, $files[3]->relative($root_dir) );
 
     return;
 }
@@ -140,10 +165,10 @@ sub _test_with_config_bin {
 
     is( exception { $tzil->build; }, undef, 'Built dist successfully' );
 
-    is( ( stat $files[0] )[2] & 07777, 0755, sprintf q{File '%s' adjusted correctly}, $files[0]->relative($root_dir) );
-    is( ( stat $files[1] )[2] & 07777, 0644, sprintf q{File '%s' adjusted correctly}, $files[1]->relative($root_dir) );
-    is( ( stat $files[2] )[2] & 07777, 0644, sprintf q{File '%s' adjusted correctly}, $files[2]->relative($root_dir) );
-    is( ( stat $files[3] )[2] & 07777, 0644, sprintf q{File '%s' adjusted correctly}, $files[3]->relative($root_dir) );
+    is( ( stat $files[0] )[2] & 07777, _p(0755), sprintf q{File '%s' adjusted correctly}, $files[0]->relative($root_dir) );
+    is( ( stat $files[1] )[2] & 07777, _p(0644), sprintf q{File '%s' adjusted correctly}, $files[1]->relative($root_dir) );
+    is( ( stat $files[2] )[2] & 07777, _p(0644), sprintf q{File '%s' adjusted correctly}, $files[2]->relative($root_dir) );
+    is( ( stat $files[3] )[2] & 07777, _p(0644), sprintf q{File '%s' adjusted correctly}, $files[3]->relative($root_dir) );
 
     return;
 }
@@ -180,10 +205,10 @@ sub _test_with_config_bin_scripts {
 
     is( exception { $tzil->build; }, undef, 'Built dist successfully' );
 
-    is( ( stat $files[0] )[2] & 07777, 0755, sprintf q{File '%s' adjusted correctly}, $files[0]->relative($root_dir) );
-    is( ( stat $files[1] )[2] & 07777, 0755, sprintf q{File '%s' adjusted correctly}, $files[1]->relative($root_dir) );
-    is( ( stat $files[2] )[2] & 07777, 0644, sprintf q{File '%s' adjusted correctly}, $files[2]->relative($root_dir) );
-    is( ( stat $files[3] )[2] & 07777, 0644, sprintf q{File '%s' adjusted correctly}, $files[3]->relative($root_dir) );
+    is( ( stat $files[0] )[2] & 07777, _p(0755), sprintf q{File '%s' adjusted correctly}, $files[0]->relative($root_dir) );
+    is( ( stat $files[1] )[2] & 07777, _p(0755), sprintf q{File '%s' adjusted correctly}, $files[1]->relative($root_dir) );
+    is( ( stat $files[2] )[2] & 07777, _p(0644), sprintf q{File '%s' adjusted correctly}, $files[2]->relative($root_dir) );
+    is( ( stat $files[3] )[2] & 07777, _p(0644), sprintf q{File '%s' adjusted correctly}, $files[3]->relative($root_dir) );
 
     return;
 }
@@ -220,10 +245,10 @@ sub _test_with_config_scripts_unchanged {
 
     is( exception { $tzil->build; }, undef, 'Built dist successfully' );
 
-    is( ( stat $files[0] )[2] & 07777, 0644, sprintf q{File '%s' adjusted correctly},  $files[0]->relative($root_dir) );
-    is( ( stat $files[1] )[2] & 07777, 0600, sprintf q{File '%s' correctly unchanged}, $files[1]->relative($root_dir) );
-    is( ( stat $files[2] )[2] & 07777, 0644, sprintf q{File '%s' adjusted correctly},  $files[2]->relative($root_dir) );
-    is( ( stat $files[3] )[2] & 07777, 0644, sprintf q{File '%s' adjusted correctly},  $files[3]->relative($root_dir) );
+    is( ( stat $files[0] )[2] & 07777, _p(0644), sprintf q{File '%s' adjusted correctly},  $files[0]->relative($root_dir) );
+    is( ( stat $files[1] )[2] & 07777, _p(0600), sprintf q{File '%s' correctly unchanged}, $files[1]->relative($root_dir) );
+    is( ( stat $files[2] )[2] & 07777, _p(0644), sprintf q{File '%s' adjusted correctly},  $files[2]->relative($root_dir) );
+    is( ( stat $files[3] )[2] & 07777, _p(0644), sprintf q{File '%s' adjusted correctly},  $files[3]->relative($root_dir) );
 
     return;
 }
