@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-Plugin-Git-FilePermissions
 
 {{$NEXT}}
 
+  - Fix the tests for Windows
+
 0.001  2017-10-15 19:39:17 UTC
 
   - Initial release
